--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -641,6 +641,6 @@ img{
     width: 316px; 
 }
 .nn{
-    height:210px;
-    width:320px;
+    height:210px !important; 
+    width:320px !important; 
 }
